# hatch-tryton-ar

./: CHANGELOG  COPYRIGHT  README.rst  pyproject.toml  tox.ini
hatch_tryton_ar/: __init__.py  hooks.py
